# pipcanary

./: .gitignore  .python-version  CHANGES.md  MANIFEST.in  Makefile  README.md  TODO.md  pyproject.toml  pytest.ini  requirements.txt  tox.ini
evilpack/: LICENSE  README.md  eviscript.py  eviscript_orig.py  pyproject.toml
evilpack/evilpack/: __init__.py
examples/ci-cd/: Dockerfile  Makefile  requirements.txt
src/pipcanary/: __main__.py  errors.py  logging.py  module_loader.py  package_auditor.py  packages.py  pipcanary.py  requirements.py  sbpip_scan.sh  spip_scan.sh  strace_scanner.py
tests/integration/: attack_test.sh  pipcanary_fail_dont_scan_test.sh  pipcanary_fail_ignored_test.sh  pipcanary_fail_test.sh  pipcanary_help_test.sh  pipcanary_index_test.sh  pipcanary_no_sandbox_test.sh  pipcanary_test.py  pipcanary_test.sh  pipcanary_test_tempdir.sh  pipcanary_toml_test.sh  pipcanary_too_recent.sh
tests/unit/: package_auditor_test.py  packages_test.py  pip_response_encab.json  pygments-2.19.0.json  pygments-2.20.0.json  pygments.json  pyproject.toml  requirements.txt  requirements_test.py  strace_scanner_test.py
