[project]
name = "pipcanary"
version = "0.0.9"
authors = [
  { name="Sebastian Kuebeck", email="sebastian.kuebeck@encab.io" },
]
license-files = ['LICENSE']
description = "Supply Chain Attack prevention tool"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators"
]

dependencies = [
  "virtualenv==21.2.0", 
  "tomli==2.4.1",
  "platformdirs<=4.9.4",
  "python-discovery<=1.2.1",
  "filelock<=3.25.2",
  "pip>=26.0.1"
]

[project.urls]
"Homepage" = "https://github.com/sebastian-kuebeck/pipcanary"
"Documentation" = "https://github.com/sebastian-kuebeck/pipcanary"
"Bug Tracker" = "https://github.com/sebastian-kuebeck/pipcanary"

[project.scripts]
pipcanary = "pipcanary.pipcanary:pipcanary"

[tool.setuptools.package-data]
pipcanary = ["src/pipcanary/sbpip_scan.sh", "src/pipcanary/spip_scan.sh"]

[tool.ruff]
line-length = 120