[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "evilpack"
version = "0.1.0"
description = "A package simulating a Supply Chain Attack"
authors = [
  { name="Sebastian Kuebeck", email="sebastian.kuebeck@encab.io" },
]
license-files = ["LICENSE"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://github.com/drevil/evilpack"
