[build-system]
requires = ["setuptools>=63.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pipcanary"
version = "0.0.5"
authors = [
  { name="Sebastian Kuebeck", email="sebastian.kuebeck@encab.io" },
]
license-files = ['LICENSE']
description = "Supply Chain Attack prevention tool"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
  "virtualenv==21.2.0", 
  "tomli==2.4.1"
]

[project.urls]
"Homepage" = "https://github.com/sebastian-kuebeck/pipcanary"
"Documentation" = "https://github.com/sebastian-kuebeck/pipcanary"
"Bug Tracker" = "https://github.com/sebastian-kuebeck/pipcanary"

[project.scripts]
pipcanary = "pipcanary.pipcanary:pipcanary"

[tool.setuptools.package-data]
pipcanary = ["src/pipcanary/sbpip_scan.sh"]

[tool.ruff]
line-length = 120